--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <p> <h1>git en uso</h1></p>
+        <p> <h1>git en uso, siguiendo intentos mas</h1></p>
     </div>
     
 </body>
